card width fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@ nav {
   border-radius: 0;
 }
 /* footer section start here */
-.footer {
+footer {
   padding: 50px 0;
   background: #0a0826;
   text-align: center;
